fixed aligning

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -122,13 +122,17 @@ body {
   &__container {
     display: flex;
     flex-wrap: wrap;
+    background-color: $bone;
   }
 
   &__item {
     flex: 1;
-    padding: 3rem;
+    padding: 0.5rem;
     position: relative;
     text-align: center;
+    @include tablet {
+      padding: 2rem;
+    }
   }
 
   &__text {
@@ -167,8 +171,14 @@ body {
     box-shadow: $box-shadow;
     border-radius: 16px;
     @include tablet {
-      width: 25rem;
+      width: 34rem;
       height: 32rem;
+      box-shadow: $box-shadow;
+      border-radius: 16px;
+    }
+    @include desktop {
+       width: 35rem;
+      height: 35rem;
       box-shadow: $box-shadow;
       border-radius: 16px;
     }
@@ -269,6 +279,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding: 1rem;
   &__title {
     display: flex;
     justify-content: center;
@@ -495,7 +506,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    background-color: $white;
+
     @include desktop {
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -520,7 +531,7 @@ body {
     border: none;
     border-radius: 1.25rem;
     width: 12rem;
-    height: 6vh;
+    height: 5vh;
     background-color: blue;
     box-shadow: 0px 0px 25px 0px rgba(15, 34, 126, 1);
     color: white;
@@ -579,7 +590,7 @@ body {
       border: none;
       border-radius: 1.25rem;
       width: 50%;
-      height: 4vh;
+      height: 5vh;
       background-color: blue;
       box-shadow: 0px 0px 25px 0px rgba(15, 34, 126, 1);
       color: white;
@@ -670,6 +681,7 @@ li {
     display: flex;
     justify-content: center;
     font-size: 0.8rem;
+    padding: 1rem;
   }
   &__email {
     color: $white;
